# Brazil-World-Cup-store

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  pyproject.toml
backend/app/: auth.py  database.py  main.py  models.py  payments.py  schemas.py  seed.py
backend/src/: auth.js  index.js  seed.js
backend/src/database/: connection.js  seed.js
backend/src/routes/: auth.js  cart.js  orders.js  payments.js  products.js
backend/src/services/: auth.js  payments.js
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts
frontend/src/components/: Footer.tsx  Navbar.tsx  ProductCard.tsx
frontend/src/context/: AuthContext.tsx  CartContext.tsx
frontend/src/pages/: Cart.tsx  Checkout.tsx  Home.tsx  Login.tsx  Orders.tsx  ProductDetail.tsx  Products.tsx  Register.tsx
